# fraisier

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  development.md  docker-compose.yml  fraises.example.yaml  fraises.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  python-version-matrix.yml  quality-gate.yml
.phases/: README.md  phase-07-docs-v1.md
.phases/2026-03-24-audit-to-10/: README.md  phase-01-surgery.md  phase-02-critical-fixes.md  phase-03-security-hardening.md  phase-04-production-robustness.md  phase-05-real-tests.md  phase-06-migration-safe-deploys.md  phase-07-packaging.md  phase-08-documentation.md  phase-09-confiture-integration-polish.md  phase-10-finalize.md
.phases/2026-03-24-hardening/: README.md  phase-01-refactoring.md  phase-02-production-safety.md  phase-03-security-tightening.md  phase-04-test-hardening.md  phase-05-finalize.md
docs/: api-reference.md  architecture.md  cli-reference.md  deployment-guide.md  failure-modes.md  getting-started-postgres.md  index.md  notifications.md  provider-bare-metal.md  provider-docker-compose.md  rfc-socket-deployment.md  security.md  socket-deployment-testing.md  socket-deployment.md  testing.md  webhook-reference.md
examples/django-celery-postgres/: README.md  confiture.yaml  fraises.yaml
fraisier/: __init__.py  _env.py  bootstrap.py  config.py  config_watcher.py  daemon.py  database.py  errors.py  framework_config.py  health_check.py  init_templates.py  locking.py  logging.py  mcp_server.py  metrics.py  migration_analyzer.py  naming.py  preflight.py  remote_validator.py  runners.py  setup.py  ssh_config.py  status.py  strategies.py  systemd.py  timeout.py  validation.py  versioning.py  webhook.py  webhook_rate_limit.py
fraisier/cli/: __init__.py  _helpers.py  bootstrap.py  db.py  health.py  logs.py  main.py  ops.py  providers.py  scaffold.py  setup.py  test_components.py  test_db.py  validate_remote.py  version.py
fraisier/db/: __init__.py  adapter.py  factory.py  history.py  lock_store.py  migrations.py  observability.py  postgres_adapter.py  state.py  webhook_store.py
fraisier/dbops/: __init__.py  _url.py  _validation.py  backup.py  confiture.py  guard.py  operations.py  restore.py  schema.py  templates.py
fraisier/deployers/: __init__.py  api.py  base.py  docker_compose.py  etl.py  mixins.py  scheduled.py
fraisier/git/: __init__.py  base.py  bitbucket.py  gitea.py  (+4 more)
monitoring/: README.md  alert-rules.yml  grafana-dashboard.json  prometheus.yml
scripts/: postgres-init.sql
tests/: __init__.py  conftest.py  test_api_deploy_health.py  test_api_rollback.py  test_atomic_rollback.py  test_atomic_version.py  test_bare_metal_ssh.py  test_bootstrap.py  test_cli_bootstrap.py  test_cli_db.py  test_cli_deploy.py  test_cli_logs.py  test_cli_ops.py  test_cli_preflight.py  test_cli_test_db.py  test_cli_trigger_deploy.py  test_cli_validate_deployment.py  test_cli_validate_remote.py  test_cli_verbose.py  test_compose_service_validation.py  test_config.py  test_config_sync.py  test_config_validation.py  test_config_wiring.py  test_coverage_gaps.py  test_daemon.py  test_database.py  test_database_lock.py  test_db_factory.py  test_db_isolation.py  test_db_migrations_unit.py  test_dbops.py  test_dbops_backup.py  test_dbops_operations.py  test_dbops_restore.py  test_dbops_templates.py  test_deployer_git_mixin.py  test_deployers.py  test_deployers_base_unit.py  test_deployment_recording.py  (+84 more)
(+71 files in other folders)
