[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Lionel Hamayon", email = "lionel.hamayon@evolution-digitale.fr"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration"
]
dependencies = [
  "fraiseql-confiture>=0.8.20,<1.0",
  "fastapi>=0.109.0,<1.0",
  "uvicorn>=0.27.0,<1.0",
  "pyyaml>=6.0,<7.0",
  "click>=8.1.0,<9.0",
  "rich>=13.0.0",
  "jinja2>=3.1.0,<4.0",
  "httpx>=0.27.0,<1.0"
]
description = "Fraisier - Deployment orchestrator for the FraiseQL ecosystem. Any language, any database, any deployment target."
keywords = ["deployment", "orchestration", "devops", "graphql", "fraiseql"]
license = {text = "MIT"}
name = "fraisier"
readme = "README.md"
requires-python = ">=3.11"
version = "0.4.16"

[project.optional-dependencies]
all-databases = [
  "aiosqlite>=0.19.0,<1.0",
  "psycopg[binary]>=3.1.0,<4.0",
  "aiomysql>=0.2.0,<1.0"
]
dev = [
  "pytest>=8.0.0,<9.0",
  "pytest-asyncio>=0.23.0,<1.0",
  "pytest-cov>=6.0.0,<7.0",
  "psycopg[binary]>=3.1.0,<4.0",
  "ruff>=0.3.0,<1.0",
  "httpx>=0.27.0,<1.0",
  "testcontainers[postgres]>=4.0.0",
]
graphql = [
  "strawberry-graphql>=0.220.0,<1.0"
]
postgres = [
  "psycopg[binary]>=3.1.0,<4.0"
]
mcp = [
    "mcp[cli]>=1.9.0",
]

[project.scripts]
fraisier = "fraisier.cli:main"
fraisier-mcp = "fraisier.mcp_server:main"
fraisier-webhook = "fraisier.webhook:run_server"

[project.urls]
Documentation = "https://fraisier.fraiseql.com"
Homepage = "https://github.com/fraiseql/fraisier"
Issues = "https://github.com/fraiseql/fraisier/issues"
Repository = "https://github.com/fraiseql/fraisier"


[tool.hatch.build.targets.wheel]
packages = ["fraisier"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["fraisier"]
omit = [
    "*/tests/*",
    "*/test_*",
    "fraisier/_env.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM",
    "TCH", "PTH", "ERA", "PL", "RUF", "PERF", "FURB",
]
ignore = [
    "PLC0415",  # Lazy imports are intentional for optional deps
    "PLR0911",  # Many return statements in CLI functions is acceptable
    "PLR0912",  # Many branches in scaffold.renderer.render() is necessary
    "PLR0913",  # Many args needed for DB/provider methods
    "PLR0915",  # Many statements in execute_deployment_request is necessary
    "PLW0603",  # Global singletons are intentional
    "ARG002",   # Abstract/override method args unused by design
    "PLR2004",  # Magic values are acceptable in this codebase
    "SIM102",   # Nested if statements in CLI code is acceptable for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "ARG001"]
